# nyc-taxi-etl

./: .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  deploy_dev.yml  deploy_development.yml  deploy_prod.yml  deploy_production.yml
dags/: postgres_load_dag.py  taxi_gold_dag.py  taxi_ingestion_dag.py  zone_lookup_ingestion_dag.py
dev/: __init__.py
dev/dags/: postgres_load_dag.py  taxi_gold_dag.py  taxi_ingestion_dag.py  zone_lookup_ingestion_dag.py
docs/: 1.ARCHITECTURE.md  3.DATA_MODEL.md  4.HISTORICAL_STRATEGY.md  5.LOCAL_SETUP.md  6.TERRAFORM.md  7.LIMITATIONS_IMPROVEMENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  DATA_MODEL.md  HISTORICAL_STRATEGY.md  LOCAL_SETUP.md  TERRAFORM_INFRA.md
environments/dev/: __init__.py
etl/: Dockerfile
etl/jobs/: base_job.py
scripts/: generate-env.sh
terraform/: README.md  bootstrap.sh  config.tfvars  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_backfill_coverage.py  test_backfill_job.py  test_base_job.py  test_config_extended.py  test_gold_job_coverage.py  test_gold_job_extended.py  test_jobs_validation.py  test_jobs_validation_extended.py  test_postgres_load_job.py  test_postgres_load_job_extended.py  test_spark_manager.py  test_taxi_gold_job.py  test_taxi_ingestion_job.py  test_terraform_config_extended.py  test_zone_lookup_job.py
tests/dags/: conftest.py  test_postgres_load_dag.py  test_taxi_gold_dag.py  test_taxi_ingestion_dag.py  test_zone_lookup_ingestion_dag.py
(+54 files in other folders)
