[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-etl"
version = "0.1.0"
description = "NYC Taxi ETL Pipeline"
requires-python = ">=3.12"
dependencies = [
    # PySpark and distributed computing
    "pyspark==4.1.1",
    "apache-airflow==2.10.4",
    "py4j==0.10.9.7",
    # Google Cloud Platform
    "google-cloud-storage==3.8.0",
    "google-cloud-bigquery==3.40.0",
    # Database
    "psycopg2-binary==2.9.11",
    # HTTP and utilities
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    # Code Quality
    "black==26.1.0",
    "flake8==7.3.0",
    "pylint==4.0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dev*"]

[tool.pytest.ini_options]
pythonpath = [".", "dev"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["dev/etl", "dev/dags", "tests"]
branch = true
omit = ["*/__init__.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "W293"]
exclude = [".venv", "__pycache__", ".git", "build", "dist"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 0
